# mtk-flash

./: .gitignore  Cargo.lock.license  Cargo.toml  README.md  SECURITY.md
.github/workflows/: build.yml  main.yml
data/: 90-mtk-flash.rules
src/: args.rs  device.rs  flash.rs  interrupt.rs  lib.rs  main.rs
tests/: args.rs  cli.rs  interrupt.rs
