[package]
name = "debian-genio-flash"
description = "A tool for flashing Grinn Genio devices."
version = "0.1.0"
edition = "2024"
repository = "https://github.com/grinn-global/debian-genio-flash"
license = "Apache-2.0"
publish = false

[dependencies]
android-sparse-image = "0.1.3"
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
clap-num = "1.2.0"
fastboot-protocol = "0.3.1"
indicatif = "0.17"
mediatek-brom = { version = "0.1.0", features = ["tokio"] }
nusb = "0.1.14"
tokio = { version = "1.45.1", features = ["full"] }
tokio-serial = "5.4.4"
