# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 Ignacy Kajdan <ignacy.kajdan@grinn-global.com>

[package]
name = "mtk-flash"
description = "A command-line utility for flashing raw images to MediaTek devices."
version = "1.2.0"
edition = "2024"
repository = "https://github.com/grinn-global/mtk-flash"
license = "Apache-2.0"
keywords = ["gamedev", "graphics"]
categories = ["command-line-utilities", "embedded"]
exclude = ["/.github/"]

[lib]
name = "mtk_flash"

[dependencies]
android-sparse-image = "0.1.3"
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
clap-num = "1.2.0"
fastboot-protocol = "0.3.1"
gpio-cdev = "0.6"
indicatif = "0.18"
mediatek-brom = { version = "0.1.0", features = ["tokio"] }
nusb = "0.1.14"
tokio = { version = "1.46.1", features = ["full"] }
tokio-serial = "5.4.5"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
